<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:ignore="NestedWeights,RtlHardcoded">
    <!-- first set -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp">

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginLeft="1dp"
            android:onClick="onClearClick"
            android:text="@string/buttonClear"
            android:layout_weight="2"
            android:textColor="@color/colorAccent"
            tools:ignore="NestedWeights" />


        <ImageView
            style="@style/MainButtonStyle"
            android:gravity ="center"
            android:src="@drawable/ic_back"
            android:onClick="onDeleteClick"
            android:contentDescription="@string/buttonDelete" />

        <Button
            style="@style/MainButtonStyle"
            android:background="@drawable/button_operator"
            android:onClick="onOperatorClick"
            android:text="@string/buttonDivide"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <!-- second set -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp">

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginLeft="1dp"
            android:onClick="onDigitClick"
            android:text="@string/button7" />

        <Button
            style="@style/MainButtonStyle"
            android:onClick="onDigitClick"
            android:text="@string/button8" />

        <Button
            style="@style/MainButtonStyle"
            android:onClick="onDigitClick"
            android:text="@string/button9" />

        <Button
            style="@style/MainButtonStyle"
            android:background="@drawable/button_operator"
            android:onClick="onOperatorClick"
            android:text="@string/buttonMultiply"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <!-- third set -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp">

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginLeft="1dp"
            android:onClick="onDigitClick"
            android:text="@string/button4" />

        <Button
            style="@style/MainButtonStyle"
            android:layout_height="match_parent"
            android:onClick="onDigitClick"
            android:text="@string/button5" />

        <Button
            style="@style/MainButtonStyle"
            android:onClick="onDigitClick"
            android:text="@string/button6"/>

        <Button
            style="@style/MainButtonStyle"
            android:background="@drawable/button_operator"
            android:onClick="onOperatorClick"
            android:text="@string/buttonMinus"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <!-- fourth set -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp">

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginLeft="1dp"
            android:onClick="onDigitClick"
            android:text="@string/button1" />

        <Button
            style="@style/MainButtonStyle"
            android:layout_height="match_parent"
            android:onClick="onDigitClick"
            android:text="@string/button2" />

        <Button
            style="@style/MainButtonStyle"
            android:onClick="onDigitClick"
            android:text="@string/button3" />

        <Button
            style="@style/MainButtonStyle"
            android:background="@drawable/button_operator"
            android:onClick="onOperatorClick"
            android:text="@string/buttonPlus"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <!-- fifth set -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp">

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginLeft="1dp"
            android:layout_weight="2"
            android:onClick="onDigitClick"
            android:text="@string/button0" />

        <Button
            style="@style/MainButtonStyle"
            android:onClick="onDotClick"
            android:text="@string/buttonDot" />

        <Button
            style="@style/MainButtonStyle"
            android:background="@drawable/button_extra"
            android:onClick="onEqual"
            android:text="@string/buttonEqual"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>