<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/DialogTheme">

    <LinearLayout
        android:id="@+id/column_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/colorAccent"
            android:padding="3dp"
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/userName"/>

        <TextView
            android:textColor="@color/colorAccent"
            android:padding="8dp"
            android:id="@+id/buttons_pressed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/buttonsClicked"/>

        <TextView
            android:textColor="@color/colorAccent"
            android:padding="3dp"
            android:id="@+id/expression"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_weight="1"
            android:text="@string/expression"/>

        <TextView
            android:textColor="@color/colorAccent"
            android:padding="3dp"
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/result"/>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/column_names">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:srcCompat="@drawable/ic_delete"
        app:backgroundTint="@color/colorPrimaryLight"
        app:fabSize="mini" />

</RelativeLayout>